--- a/markup/components/avatar/avatar.styl
+++ b/markup/components/avatar/avatar.styl
@@ -1,5 +1,24 @@
 .avatar
+    position: relative
 
     &_size_small
         width: 40px
         height: 40px
+
+    &_size_big
+        width: 120px
+        height: 120px
+
+    &__img
+        width: 100%
+        height: 100%
+
+    &__online
+        position: absolute
+        top: 0
+        left: 0
+        width 9px
+        height 9px
+        box-shadow 0 2px 8px rgba(66, 222, 159, .5)
+        background-color #42de9f
+        border-radius: 50%
