--- a/markup/components/header/header.pug
+++ b/markup/components/header/header.pug
@@ -77,7 +77,7 @@ mixin header()
                     +navbar-link-dropdown(href='#')._row._has_badge
                         +navbar-badge._top_right 2
                         +navbar-col
-                            +avatar(src='static/img/content/avatars/navbar.png')._size_small
+                            +avatar('navbar.png')._size_small
                         +navbar-col
                             +navbar-heading Megan
                             +navbar-description menu
@@ -155,7 +155,7 @@ mixin header()
                 +navbar-item
                     +navbar-link(href='#')
                         +navbar-badge._top_right 2
-                        +avatar(src='static/img/content/avatars/navbar.png')._size_small
+                        +avatar('navbar.png')._size_small
                 //+navbar-item
                 //    +navbar-link(href='#')
                 //        != pugHelpers.Icon.call(locals, {iconName: 'profile', className: 'navbar__icon_profile', iconWidth: '18', iconHeight: '17'})
