--- a/markup/pages/index.pug
+++ b/markup/pages/index.pug
@@ -7,22 +7,22 @@ include ../components/container/container
 include ../components/filter/filter
 include ../components/popup-welcome/popup-welcome
 include ../components/select-city-popup/select-city-popup
-include ../components/profile-card/profile-card
+include ../components/profile-popup/profile-popup
 
 block header
     +header
 
 block content
     +container
-        div(style='width: 316px; height: 1000px; background-color: #fff')
-            +profile-card
         +demo
             +demo-link('model-list.html') 01_List_1
             +demo-link('model-list-no-models.html') 01_List_1_no models
             +demo-link('model-list-search-result.html') 01_List_8_search 2
+            +demo-link('#profile-popup')(data-popup-id='#profile-popup' data-action='show').js-toggle-popup 02_card_1
     +arrow-up
 
 block popups
+    +profile-popup
     +popup-welcome
     +filter-extended
     +select-city-popup
