--- a/markup/components/container/container.styl
+++ b/markup/components/container/container.styl
@@ -3,6 +3,7 @@
     width: container-width
     margin: 0 auto
 
-    +below(768px)
-        width: 100%
-        padding: 0 12px
+    +below(1134px)
+        width 100%
+        padding-left 30px
+        padding-right 30px
