--- a/markup/components/accordion/accordion.styl
+++ b/markup/components/accordion/accordion.styl
@@ -38,6 +38,9 @@
         font-weight: 400
         user-select none
 
+        +below(768px)
+            ellipsis(100%)
+
     &__close
         display: flex
         align-items: center
