--- a/markup/components/model-info/model-info.styl
+++ b/markup/components/model-info/model-info.styl
@@ -44,3 +44,9 @@
     &__icon-ok
         fill: mainColor
         margin-right: 12px
+
+    &__row
+        margin-top: 53px
+
+    &__tour
+        margin-top: 52px
