--- a/markup/components/profile-popup/profile-popup.pug
+++ b/markup/components/profile-popup/profile-popup.pug
@@ -27,7 +27,7 @@ mixin profile-popup()
                             +short-info
                                 +short-info-heading page views
                                 +short-info-content
-                                    +short-info-text 14,485 (Since 01.11.12)
+                                    +short-info-text 14,485 <span>(Since 01.11.12)</span>
                             +short-info
                                 +short-info-heading Hand verified
                                 +short-info-content
