--- a/markup/components/selectbox/selectbox.styl
+++ b/markup/components/selectbox/selectbox.styl
@@ -2,6 +2,10 @@
     position: relative
     display: block
 
+    &_grey
+        & ^[0]__box
+            background-color bgColor
+
     &_deep-dark
         & ^[0]__box
             border-color: rgba(#efefef, .06)
