--- a/markup/components/button/button.styl
+++ b/markup/components/button/button.styl
@@ -9,6 +9,7 @@
     font-size: 16px
     cursor pointer
     letter-spacing 1px
+    color: darkGreyColor
 
     &_inline
         display: inline-block
@@ -31,6 +32,9 @@
     &_bg
         &_darkGrey
             background-color darkGreyColor
+
+        &_white
+            background-color: #fff
 
         &_grey
             background-color #212223
