--- a/markup/components/profile-contacts/profile-contacts.styl
+++ b/markup/components/profile-contacts/profile-contacts.styl
@@ -1,5 +1,14 @@
-.model-info
+.profile-contacts
     display: block
+
+    .contacts-card
+        margin-top: 45px
+
+    .grid
+        margin-top: 47px
+
+        .grid
+            margin-top: -(grid-gap)
 
     &__heading
         color darkGreyColor
@@ -7,17 +16,6 @@
         font-size 33px
         font-weight 400
         letter-spacing initial
-
-    &__description
-        margin-top: 30px
-        color rgba(darkGreyColor, .79)
-        font-family fontMain
-        font-size 16px
-        font-weight 300
-        line-height 26px
-
-    .grid
-        margin-top: 47px
 
     &__subheading
         color darkGreyColor
@@ -44,17 +42,6 @@
             font-weight 400
             line-height 22px
 
-
         b
             font-family fontSecond
             font-weight: 500
-
-    &__icon-ok
-        fill: mainColor
-        margin-right: 12px
-
-    &__row
-        margin-top: 53px
-
-    &__tour
-        margin-top: 52px
