--- a/markup/components/short-info/short-info.styl
+++ b/markup/components/short-info/short-info.styl
@@ -16,6 +16,7 @@
         display: block
         line-height 22px
         font-size: 16px
+        color: darkGreyColor
 
         span
             color: #878889
