--- a/markup/components/profile-popup/profile-popup.styl
+++ b/markup/components/profile-popup/profile-popup.styl
@@ -10,6 +10,8 @@
         flex: 1
 
     &__sidebar
+        display: flex
+        flex-direction: column
         width: 316px
         padding-bottom: 57px
         background-color: #fff
