--- a/markup/components/tags/tags.styl
+++ b/markup/components/tags/tags.styl
@@ -1,9 +1,13 @@
 .tags
     display: inline-flex
     flex-wrap: wrap
+    padding-left: 1px
+    padding-top: 1px
 
     &__item
         display: block
+        margin-left: -1px
+        margin-top: -1px
 
     &__link
         display: block
