--- a/markup/components/profile-card/profile-card.styl
+++ b/markup/components/profile-card/profile-card.styl
@@ -51,6 +51,8 @@
             display: flex
             flex-wrap: wrap
             margin-top: 18px
+            padding-left: 1px
+            padding-top: 1px
 
             a
                 display: block
@@ -61,3 +63,5 @@
                 font-weight 400
                 text-decoration: none
                 border: 1px solid borderColor
+                margin-left: -1px
+                margin-top: -1px
