--- a/markup/components/profile-popup/profile-popup.styl
+++ b/markup/components/profile-popup/profile-popup.styl
@@ -1,6 +1,7 @@
 .profile-popup
     display: block
     background-color bgColor
+    padding-bottom: 58px
 
     &__main
         display: flex
@@ -29,3 +30,6 @@
         margin-top: 50px
         width: 100%
         padding: 0 58px
+
+        &_left_padding
+            padding-right: 0
