--- a/markup/components/profile-popup/profile-popup.pug
+++ b/markup/components/profile-popup/profile-popup.pug
@@ -38,7 +38,7 @@ mixin profile-popup()
                                 +col(4)
                                     +button()(href='#')._uppercase._border_standart Save as PDF
                     +e.ASIDE.sidebar
-                        +profile-card
+                        +profile-card I'm working now!
 
                         +e.short-info
                             +short-info
