--- a/markup/components/popup/popup.styl
+++ b/markup/components/popup/popup.styl
@@ -8,6 +8,8 @@
     height: 100vh
     background-color: rgba(darkGreyColor, .8)
     z-index: 500
+    overflow-y: auto
+    overflow-x: hidden
 
     &_start
         & ^[0]__wrapper
@@ -21,9 +23,7 @@
         justify-content: center
         align-items: center
         width: 100%
-        height: 100vh
-        overflow-y: auto
-        overflow-x: hidden
+        height: 100%
 
         &_full
             width 100%
